test/test-cases/negative/id_errors.pas
Program id_errors(input, output);
Const
  b = 1;

Var
  a, x, x, y: integer;
  a: integer;
Begin
  x := 3 +;
  read(r, y)
End.
